DFE-205 Fix long captions causing cells to mis-align

--- a/src/explore-education-statistics-frontend/src/prototypes/table-tool/components/FixedHeaderGroupedDataTable.module.scss
+++ b/src/explore-education-statistics-frontend/src/prototypes/table-tool/components/FixedHeaderGroupedDataTable.module.scss
@@ -13,7 +13,7 @@ $border-width: 4px;
   }
 }
 
-.stickyHeaderTable {
+.headerTable {
   left: 0;
   position: absolute;
   top: 0;
@@ -26,7 +26,7 @@ $border-width: 4px;
   }
 }
 
-.stickyColumnTable {
+.columnTable {
   left: 0;
   position: absolute;
   top: 0;
@@ -38,7 +38,7 @@ $border-width: 4px;
   }
 }
 
-.stickyIntersectionTable {
+.intersectionTable {
   left: 0;
   position: absolute;
   top: 0;
@@ -48,6 +48,14 @@ $border-width: 4px;
 
 .intersectionCell {
   border-bottom: 0 !important;
+}
+
+.figure {
+  margin: 0;
+
+  figcaption {
+    padding-bottom: govuk-spacing(4);
+  }
 }
 
 .borderLeft {
